--- a/style.css
+++ b/style.css
@@ -142,4 +142,14 @@ a.left{
     justify-items: center;
 }
 
-  
+.inputs{
+    display: flex;
+    margin-top: 25px;
+    margin-left: 5%;
+    margin-right: 5%;
+    justify-content: space-between;
+}
+#accordion{
+    margin-left: 30px;
+    margin-right: 15px;
+}
